corpus/cpp/template/case-13/snapshots/gcc13_14/single_sink_structured/render.ci.txt
src/main.cpp:6:5: error: [template] template instantiation failed
help: start from the first user-owned template frame and match template arguments
raw : no matching function for call to 'expect_ptr(int&)'
| src/main.cpp:6:5
|     expect_ptr(value);
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void expect_ptr(T*)'
omitted 1 internal template frames
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output